crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__create_draft.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: created
---
{
  "data": {
    "createDraft": {
      "createdAt": "[ts]",
      "detail": "created through GraphQL",
      "id": "[id]",
      "numSpecs": 0,
      "updatedAt": "[ts]"
    }
  }
}
