crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__delete_draft_as_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: bob_deleted
---
{
  "data": {
    "deleteDraft": "0000000000000020"
  }
}
