crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__delete_foreign_draft.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: foreign
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 7,
          "line": 3
        }
      ],
      "message": "draft not found",
      "path": [
        "deleteDraft"
      ]
    }
  ]
}
