crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__draft_errors_filtered.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: response
---
{
  "data": {
    "draft": {
      "errors": [
        {
          "catalogName": "",
          "detail": "global diagnostic",
          "scope": "file:///tmp/catalog.yaml"
        },
        {
          "catalogName": "aliceCo/data/foo",
          "detail": "readable diagnostic",
          "scope": "flow://collection/aliceCo/data/foo#/schema"
        }
      ]
    }
  }
}
