crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__draft_lookup.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: "&responses[..2]"
---
[
  {
    "data": {
      "draft": {
        "createdAt": "2024-01-01T00:00:00+00:00",
        "detail": "owned",
        "id": "0000000000000010",
        "numSpecs": 2,
        "updatedAt": "2024-01-01T00:00:00+00:00"
      }
    }
  },
  {
    "data": {
      "draft": null
    }
  }
]
