crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__draft_specs_first_page.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: first_page
---
{
  "data": {
    "draft": {
      "numSpecs": 4,
      "specs": {
        "edges": [
          {
            "cursor": "aliceCo/data/foo",
            "node": {
              "catalogName": "aliceCo/data/foo",
              "detail": "same as live",
              "expectPubId": "0000000000000700",
              "isUnchanged": true,
              "lastPubId": "000000fffe000002",
              "spec": {},
              "specType": "collection",
              "updatedAt": "2024-02-02T01:00:00+00:00"
            }
          },
          {
            "cursor": "aliceCo/in/capture-foo",
            "node": {
              "catalogName": "aliceCo/in/capture-foo",
              "detail": null,
              "expectPubId": "0000000000000000",
              "isUnchanged": false,
              "lastPubId": "000000fffe000002",
              "spec": null,
              "specType": null,
              "updatedAt": "2024-02-02T02:00:00+00:00"
            }
          }
        ],
        "pageInfo": {
          "endCursor": "aliceCo/in/capture-foo",
          "hasNextPage": true,
          "hasPreviousPage": false,
          "startCursor": "aliceCo/data/foo"
        }
      }
    }
  }
}
