crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__draft_specs_invalid_page_size.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: specs_response
---
{
  "data": {
    "draft": null
  },
  "errors": [
    {
      "locations": [
        {
          "column": 9,
          "line": 5
        }
      ],
      "message": "The \"first\" parameter must be a non-negative number",
      "path": [
        "draft",
        "specs"
      ]
    }
  ]
}
