crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__drafts_default_page.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: default_page
---
{
  "data": {
    "drafts": {
      "edges": [
        {
          "cursor": "0000000000000010",
          "node": {
            "createdAt": "2024-01-01T00:00:00+00:00",
            "detail": "first",
            "id": "0000000000000010",
            "numSpecs": 1,
            "updatedAt": "2024-01-01T00:00:00+00:00"
          }
        },
        {
          "cursor": "0000000000000030",
          "node": {
            "createdAt": "2024-01-02T00:00:00+00:00",
            "detail": "second",
            "id": "0000000000000030",
            "numSpecs": 0,
            "updatedAt": "2024-01-02T00:00:00+00:00"
          }
        },
        {
          "cursor": "0000000000000040",
          "node": {
            "createdAt": "2024-01-03T00:00:00+00:00",
            "detail": "third",
            "id": "0000000000000040",
            "numSpecs": 0,
            "updatedAt": "2024-01-03T00:00:00+00:00"
          }
        }
      ],
      "pageInfo": {
        "endCursor": "0000000000000040",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "0000000000000010"
      }
    }
  }
}
