crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__drafts_invalid_page_size.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: negative
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 7,
          "line": 3
        }
      ],
      "message": "The \"first\" parameter must be a non-negative number",
      "path": [
        "drafts"
      ]
    }
  ]
}
